# Context-graph-system

./: .gitignore  README.md  pyproject.toml  render.yaml
artifacts/reports/: semantic_catalog.json
frontend/: index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
scripts/: build_context_graph.py  generate_notebook.py
src/context_graph/: __init__.py  api.py  bridges.py  catalog_service.py  config.py  conversation_store.py  entity_service.py  evidence_service.py  exceptions.py  graph.py  graph_service.py  io.py  main.py  normalize.py  observability.py  pipeline.py  plan_validator.py  planner.py  query_service.py  runtime.py  schemas.py  semantic.py  settings.py  sql_guard.py  sqlite_utils.py
tests/: conftest.py  test_api.py  test_planner.py  test_query_service.py  test_settings.py
